--- a/config.env
+++ b/config.env
@@ -10,7 +10,7 @@ OWNER_NAME="᚛Desire kambarami᚜"
 OWNER_NUMBER="0780040360"
 
 #═══════[ BOT PROFILE ]═══════✧#
-BOT_NAME="BWM-XMD"
+BOT_NAME="Dr kays-XMD"
 BOT_IMAGE=""
 STARTING_BOT_MESSAGE='yes'
 
